array.island.Island.scala.error
Erreur de compilation :
Island:3: error: not found: value a
  a= max(num) 
  ^